src/objects/ParticipanteSiniestro__c.object
<CustomObject>
    <fields>
        <fullName>MX_SB_MLT_Contacto__c</fullName>
        <description>Referencia a los Datos de contacto como participante del siniestro para multiasistencia</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participantes Siniestro</relationshipLabel>
        <relationshipName>Participantes_Siniestro</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Marca__c</fullName>
        <description>Marca del vehículo para el participante siniestro tipo Auto para multiasistencia</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Marca del vehículo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Modelo__c</fullName>
        <description>Modelo del vehiculo para el participante siniestro tipo Auto para multiasistencia</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Modelo del vehículo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Placas__c</fullName>
        <description>Placa del vehiculo asegurado para el participante siniestro tipo Auto para multiasistencia</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Placas del vehículo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Siniestro__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Referencia del participante a un siniestro para multiasistencia</description>
        <label>Siniestro</label>
        <referenceTo>Siniestro__c</referenceTo>
        <relationshipLabel>Participantes Siniestro</relationshipLabel>
        <relationshipName>Participantes_Siniestro</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Submarca__c</fullName>
        <description>Submarca del vehículo para el participante siniestro tipo Auto para multiasistencia</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Submarca del vehículo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_TipoParticipante__c</fullName>
        <description>Tipo de participante en un siniestro puede ser persona, automovil, o motocicleta para multiasistencia</description>
        <label>Tipo de participante</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Persona</fullName>
                </value>
                <value>
                    <fullName>Automóvil</fullName>
                </value>
                <value>
                    <fullName>Motocicleta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Participante Siniestro</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Participante Siniestro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participantes Siniestro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>